Fix issue with scrollView not scrolling to bottom when new message is sent or received when initially close to bottom; Updated Chat LeftPane to include 'Yesterday' timestamp and message deleted, also fixed some style/layout issues; Memoize Chat Panes to prevent redundant re-renders.

--- a/teach-me-ui/src/styles/Main/_Chat.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.scss
@@ -25,7 +25,7 @@ $chat-header-min-height: 3.75rem;
   .tab-panel-item {
     [class*='Icon'] {
       font-size: 1.05rem;
-      margin-bottom: -0.25rem;
+      margin-bottom: -0.2rem;
       margin-left: 0.1rem;
       color: rgba(0, 0, 0, 0.35);
       transition: 0.3s;
