--- a/teach-me-ui/src/styles/_misc.scss
+++ b/teach-me-ui/src/styles/_misc.scss
@@ -444,6 +444,14 @@ div {
   text-align: center;
 }
 
+.font-italic {
+  font-style: italic;
+}
+
+.font-bold {
+  font-weight: bold;
+}
+
 .theme-primary {
   color: $theme-primary;
 }
